# nexterm

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  build.rs
app/src/: main.rs  pane.rs  ssh_backend.rs  tabs.rs
crates/nexterm-agent/: Cargo.toml
crates/nexterm-agent/src/: ambient.rs  bridge.rs  lib.rs  tools.rs
crates/nexterm-config/: Cargo.toml
crates/nexterm-config/src/: lib.rs  schema.rs  watcher.rs
crates/nexterm-core/: Cargo.toml
crates/nexterm-core/src/: event.rs  lib.rs  pane.rs  tab.rs
crates/nexterm-docker/: Cargo.toml
crates/nexterm-docker/src/: backend.rs  lib.rs  local.rs  model.rs  parse.rs  ssh.rs
crates/nexterm-history/: Cargo.toml
crates/nexterm-history/src/: lib.rs
crates/nexterm-keystore/: Cargo.toml
crates/nexterm-keystore/src/: lib.rs
crates/nexterm-pty/: Cargo.toml
crates/nexterm-pty/shell-integration/: bash.sh  fish.sh  pwsh.ps1  zsh.sh
crates/nexterm-pty/src/: lib.rs
crates/nexterm-render/: Cargo.toml
crates/nexterm-render/src/: atlas.rs  builtin_font.rs  gui.rs  lib.rs  pipeline.rs  renderer.rs  text_renderer.rs
crates/nexterm-session/: Cargo.toml
crates/nexterm-session/src/: group.rs  lib.rs  store.rs
crates/nexterm-sftp/: Cargo.toml
crates/nexterm-sftp/src/: browser.rs  lib.rs  transfer.rs
crates/nexterm-ssh/: Cargo.toml
crates/nexterm-ssh/src/: config_parser.rs  connection.rs  lib.rs  multi_exec.rs  tunnel.rs
crates/nexterm-sync/: Cargo.toml
crates/nexterm-sync/src/: lib.rs
crates/nexterm-theme/: Cargo.toml
crates/nexterm-theme/src/: lib.rs
crates/nexterm-ui/: Cargo.toml
crates/nexterm-ui/src/: block.rs  lib.rs  sidebar.rs  split_manager.rs  tab_bar.rs
crates/nexterm-vte/: Cargo.toml
crates/nexterm-vte/examples/: bench_scrolling.rs
crates/nexterm-vte/src/: grid.rs  lib.rs  parser.rs
crates/portable-pty-sideload/: Cargo.toml
crates/portable-pty-sideload/src/win/: psuedocon.rs
