[package]
name = "nexterm-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "AI Agent bridge: connects Agenium engine to NexTerm terminal/SSH context"

[dependencies]
# Agenium engine crates
agent-core.workspace = true
agent-provider.workspace = true
agent-tool.workspace = true
agent-tools.workspace = true
agent-permission.workspace = true
agent-context.workspace = true
agent-sandbox.workspace = true
agent-mcp.workspace = true
agent-session.workspace = true
agent-prompt.workspace = true
agent-vault.workspace = true
agent-observe.workspace = true
agent-skill.workspace = true

# NexTerm crates
nexterm-core.workspace = true
nexterm-ssh.workspace = true

# Common
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
