[package]
name = "nexterm-docker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Docker container panel backend: list, logs, exec via local subprocess or SSH channel"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
portable-pty.workspace = true
russh.workspace = true
