[package]
name = "nexterm-history"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command history indexing with SQLite FTS5 full-text search"

[dependencies]
rusqlite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
