[package]
name = "nexterm-keystore"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Key management, OS Keychain integration, and hardware token support"

[dependencies]
keyring.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
dirs.workspace = true
