[package]
name = "nexterm-sftp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SFTP file browsing, transfer, and remote editing engine for NexTerm"

[dependencies]
russh.workspace = true
russh-sftp.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
