[package]
name = "nexterm-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SSH connection management, tunneling, and ProxyJump for NexTerm"

[dependencies]
russh.workspace = true
russh-keys.workspace = true
russh-sftp.workspace = true
ssh2-config.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
nexterm-keystore.workspace = true
