[package]
name = "nexterm-theme"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Theme engine: color schemes, dynamic transparency, Oh My Posh compatibility"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
