[package]
name = "nexterm-vte"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "VT100/VT520 terminal emulation parser for NexTerm"

[dependencies]
vte.workspace = true
tracing.workspace = true
bitflags = "2"
unicode-width.workspace = true
regex.workspace = true
